--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.profiles.active=local
+
 # AWS Lambda Function
 function.name=awsLambdaFunction
 spring.jmx.enabled=true
+
+another.function.name=thisLambdaFunction
