Updated to Spring Boot 2 and Spring Cloud Function official release version.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=local
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # AWS Lambda Function
 function.name=awsLambdaFunction
